update product category
