# app/Http/Resources/ProductCategoryResource.php
@@ -14,7 +14,7 @@ class ProductCategoryResource extends JsonResource
             'name' => $this->name,
             'slug' => $this->slug,
             'description' => $this->description,
-            'image_url' => $this->image_url,
+            'image' => $this->image,
             'created_at' => $this->created_at->toDateTimeString(),
         ];
     }
